<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HigherLowerActivity">
    <TextView
            android:text="@string/text_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:textSize="18sp"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:src="@drawable/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivDice" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginTop="64dp"
            android:contentDescription="@string/image_description"/>
    <TextView
            android:text="@string/lastThrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLastThrow" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivDice" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/button_lower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLower" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/btnEquals"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/button_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEquals"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/btnLower"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/btnHigher"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/button_higher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHigher"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/btnEquals"/>
</androidx.constraintlayout.widget.ConstraintLayout>